# lab5_os

./: .gitignore  CMakeLists.txt  README.md  run_tests.sh
include/: common.h  employee.h
src/: client.cpp  employee.cpp  server.cpp  utils.cpp
tests/: test_employee.cpp  test_runner.cpp  test_utils.cpp
